--- a/style.css
+++ b/style.css
@@ -1,5 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Contrail+One&family=Rubik+Dirt&display=swap');
-
+*{
+    margin: 0;
+    padding: 0;
+}
 .navbar{
  padding: 2rem; 
  background-color:red;
@@ -50,6 +53,14 @@ button.btn.btn-info {
 .hero-inferior-imagen{
     max-width: 10px;
 }
+p{
+    font-size: 0.8rem;
+}
+.proyectos img {
+ gap: 10px;
+    padding: 10px;
+   
+}
 }
 .seccion-oscura {
     color: white;
@@ -65,7 +76,7 @@ button.btn.btn-info {
 }
 
 .sobre-mi .contenedor {
-   max-width: 600px;
+   max-width: 100%;
    text-align: center;
 }
 .seccion-titulo{
@@ -131,12 +142,13 @@ button.btn.btn-info {
 
 .proyectos img {
     height: 100%;
-    width: 100%;
+    width: auto;
     padding: 10px;
     border-radius: 10px;
     display: block;
     transition: all 0.2s ease;
 }
+
 
 .proyectos-contenedor {
     padding-top: 60px;
@@ -232,4 +244,7 @@ footer{
    display: flex;
    align-items: center;
    justify-content: center;
+}body, html {
+  width: 100%;
+  overflow-x: hidden;
 }
